opam-version: "2.0"
maintainer: ["Alexander Markov" "kkeundotnet <kkeundotnet@gmail.com>"]
authors: ["Alexander Markov"]
homepage: "http://komar.in/en/code/ecaml"
bug-reports: "http://komar.in/en/about"

synopsis: "A simple template engine for OCaml"
description: "A simple template engine for OCaml"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {build}
  "extlib"
]
